--- a/packages/default/scss/toolbar/_theme.scss
+++ b/packages/default/scss/toolbar/_theme.scss
@@ -21,7 +21,7 @@
         // Template item
         .k-toolbar-item:focus,
         .k-toolbar-item.k-focus {
-            @include box-shadow( $kendo-toolbar-item-shadow );
+            @include focus-indicator( $kendo-toolbar-item-shadow );
         }
 
 
@@ -72,7 +72,7 @@
             // Button focus state
             &:focus,
             &.k-focus {
-                box-shadow: $kendo-menu-popup-item-focus-shadow;
+                @include focus-indicator( $kendo-menu-popup-item-focus-shadow, true );
             }
 
             // Active state
