--- a/packages/material/scss/_variables.scss
+++ b/packages/material/scss/_variables.scss
@@ -7,6 +7,7 @@ $kendo-enable-rounded: true !default;
 $kendo-enable-shadows: true !default;
 $kendo-enable-gradients: false !default;
 $kendo-enable-transitions: true !default;
+$kendo-enable-focus-contrast: false !default;
 
 $kendo-use-input-button-width: false !default;
 $kendo-use-input-spinner-width: false !default;
