--- a/packages/core/scss/mixins/index.import.scss
+++ b/packages/core/scss/mixins/index.import.scss
@@ -2,6 +2,7 @@
 @import "./_box-shadow.scss";
 @import "./_data-uri.scss";
 @import "./_disabled.scss";
+@import "./_focus-indicator.scss";
 @import "./_gradient.scss";
 @import "./_hide-scrollbar.scss";
 @import "./_import-once.scss";
