--- a/packages/default/scss/grid/_theme.scss
+++ b/packages/default/scss/grid/_theme.scss
@@ -95,7 +95,7 @@
         .k-grid-pager {
             &:focus,
             &.k-focus {
-                box-shadow: $kendo-grid-focus-shadow;
+                @include focus-indicator( $kendo-grid-focus-shadow, true );
             }
         }
 
@@ -181,7 +181,7 @@
             }
             &:focus,
             &.k-focus {
-                box-shadow: inset 0 0 0 2px rgba( $kendo-color-black, .1 );
+                @include focus-indicator( inset 0 0 0 2px rgba( $kendo-color-black, .1 ), true );
             }
             &.k-active {
                 color: $kendo-selected-text;
@@ -365,7 +365,7 @@
     }
     .k-columnmenu-item:focus,
     .k-columnmenu-item.k-focus {
-        @include box-shadow( $kendo-list-item-focus-shadow );
+        @include focus-indicator( $kendo-list-item-focus-shadow, true );
     }
 
     .k-columnmenu-item {
@@ -410,7 +410,7 @@
 
                 &:focus,
                 &.k-focus {
-                    @include box-shadow( $kendo-list-item-focus-shadow );
+                    @include focus-indicator( $kendo-list-item-focus-shadow, true );
                 }
             }
         }
