--- a/packages/default/scss/stepper/_theme.scss
+++ b/packages/default/scss/stepper/_theme.scss
@@ -32,7 +32,7 @@
             .k-step-link:focus  {
                 // Labels only
                 .k-step-label:only-child {
-                    @include box-shadow( inset 0 0 0 $stepper-indicator-focus-size $kendo-component-border );
+                    @include focus-indicator( $indicator: ( inset 0 0 0 $stepper-indicator-focus-size $kendo-component-border ), $inset: true );
                 }
             }
 
