--- a/packages/default/scss/table/_theme.scss
+++ b/packages/default/scss/table/_theme.scss
@@ -69,7 +69,7 @@
             border-color: $kendo-table-focus-border;
             color: $kendo-table-focus-text;
             background-color: $kendo-table-focus-bg;
-            box-shadow: $kendo-table-focus-shadow;
+            @include focus-indicator( $kendo-table-focus-shadow, inset );
         }
     }
 
