fix(popover): set height to inner element to display callout correctly and add a visual test

--- a/packages/default/scss/popover/_layout.scss
+++ b/packages/default/scss/popover/_layout.scss
@@ -27,6 +27,7 @@
     .k-popover-inner {
         position: relative;
         border-radius: inherit;
+        height: inherit;
     }
 
     // Header
