--- a/packages/fluent/scss/popover/_layout.scss
+++ b/packages/fluent/scss/popover/_layout.scss
@@ -35,6 +35,7 @@
     .k-popover-inner {
         position: relative;
         border-radius: inherit;
+        height: inherit;
     }
 
     // Header
