--- a/packages/bootstrap/scss/chip/_theme.scss
+++ b/packages/bootstrap/scss/chip/_theme.scss
@@ -1,1 +1,26 @@
 @import "~@progress/kendo-theme-default/scss/chip/_theme.scss";
+
+@include exports( "chip/theme/bootstrap" ) {
+
+    @each $name, $color in $kendo-chip-theme-colors {
+        .k-chip-outline-#{$name} {
+
+            @if ($name == "info") {
+                @include fill (
+                    $color: if( $dark-theme, k-color-tint($color, 25%), $kendo-chip-outline-text),
+                    $border: if( $dark-theme, k-color-tint($color, 25%), $color)
+                );
+
+                &:hover,
+                &.k-hover,
+                &.k-selected {
+                    @include fill(
+                        $color: if( $dark-theme, k-contrast-color($color), $kendo-chip-outline-text),
+                        $bg: $color
+                    );
+                }
+
+            }
+        }
+    }
+}
