--- a/packages/material/scss/chip/_theme.scss
+++ b/packages/material/scss/chip/_theme.scss
@@ -6,30 +6,13 @@
     .k-chip-solid {
         border-color: transparent;
     }
+
+    // Solid
     @each $name, $color in $kendo-chip-theme-colors {
         .k-chip-solid-#{$name} {
-            &:hover,
-            &.k-hover {
-                @include fill(
-                    $bg: rgba( $color, .16 ),
-                    $color: $color
-                );
-            }
-
             &:focus,
             &.k-focus {
                 @include box-shadow( none );
-                @include fill(
-                    $bg: rgba( $color, .24),
-                    $color: $color
-                );
-            }
-
-            &.k-selected {
-                @include fill(
-                    $bg: rgba( $color, .24 ),
-                    $color: $color
-                );
             }
         }
     }
@@ -37,25 +20,62 @@
     // Outline
     @each $name, $color in $kendo-chip-theme-colors {
         .k-chip-outline-#{$name} {
-            &:focus,
-            &.k-focus {
-                @include box-shadow( none );
-                @include fill( $bg: rgba( $color, .24 ) );
-            }
-
-            &:hover,
-            &.k-hover {
+            @if ($name == "base") {
+                &:focus,
+                &.k-focus {
+                    @include box-shadow( none );
+                    @include fill( $bg: k-try-tint( $color, 88% ) );
+                }
+            } @else if($name == "warning") {
                 @include fill(
-                    $bg: rgba( $color, .08 ),
-                    $color: $color
+                    $color: if( $dark-theme, k-try-shade( $color, 50% ), $kendo-chip-outline-text)
                 );
-            }
 
-            &.k-selected {
+                &:focus,
+                &.k-focus {
+                    @include box-shadow( none );
+                    @include fill( $bg: k-try-tint( $color, 65% ) );
+                }
+
+                &:hover,
+                &.k-hover {
+                    @include fill(
+                        $bg: k-try-tint( $color, 80% ),
+                        $color: if( $dark-theme, k-try-shade( $color, 50% ), $kendo-chip-outline-text)
+                    );
+                }
+
+                &.k-selected {
+                    @include fill(
+                        $bg: k-try-tint( $color, 65% ),
+                        $color: if( $dark-theme, k-try-shade( $color, 50% ), $kendo-chip-outline-text)
+                    );
+                }
+            } @else {
                 @include fill(
-                    $bg: rgba( $color, .24 ),
-                    $color: $color
+                    $color: k-try-shade( $color, 50% )
                 );
+
+                &:focus,
+                &.k-focus {
+                    @include box-shadow( none );
+                    @include fill( $bg: k-try-tint( $color, 65% ) );
+                }
+
+                &:hover,
+                &.k-hover {
+                    @include fill(
+                        $bg: k-try-tint( $color, 80% ),
+                        $color: k-try-shade( $color, 50% )
+                    );
+                }
+
+                &.k-selected {
+                    @include fill(
+                        $bg: k-try-tint( $color, 65% ),
+                        $color: k-try-shade( $color, 50% )
+                    );
+                }
             }
         }
     }
