--- a/packages/default/scss/notification/_layout.scss
+++ b/packages/default/scss/notification/_layout.scss
@@ -31,7 +31,10 @@
         line-height: $kendo-notification-line-height;
         cursor: default;
         position: relative;
-        display: block;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: $kendo-notification-icon-spacing;
         -webkit-touch-callout: none;
         -webkit-tap-highlight-color: $rgba-transparent;
 
@@ -40,48 +43,27 @@
         *::after {
             box-sizing: border-box;
         }
-    }
-
-    .k-notification-wrap {
-        display: flex;
-        flex-flow: row nowrap;
-
-        > .k-icon {
-            margin-top: $kendo-notification-icon-offset;
-            margin-right: $kendo-notification-icon-spacing;
-            flex: none;
-        }
-
-        > .k-i-close,
-        > .k-i-x {
-            margin-right: 0;
-            margin-left: $kendo-notification-icon-spacing;
-            flex: none;
-            cursor: pointer;
-        }
 
         > .k-notification-content {
             flex: 1 1 auto;
         }
     }
 
-    // RTL
-    .k-rtl .k-notification,
-    [dir="rtl"] .k-notification {
-
-        .k-notification-wrap {
-
-            > .k-icon {
-                margin-right: 0;
-                margin-left: $kendo-notification-icon-spacing;
-            }
-
-            > .k-i-close,
-            > .k-i-x {
-                margin-left: 0;
-                margin-right: $kendo-notification-icon-spacing;
-            }
-        }
+    .k-notification-actions {
+        flex: none;
+        display: flex;
+        gap: $kendo-notification-icon-spacing;
+        flex-flow: row nowrap;
+        align-items: center;
+        align-self: center;
+        cursor: pointer;
+    }
+    .k-notification-action {
+        flex: none;
+        display: flex;
+        flex-flow: row nowrap;
+        align-items: center;
+        align-self: center;
     }
 
 }
