fix(scheduler): remove default browser focus outline of the k-scheduler-content element

--- a/packages/fluent/scss/scheduler/_layout.scss
+++ b/packages/fluent/scss/scheduler/_layout.scss
@@ -397,6 +397,10 @@
         border-color: inherit;
         position: relative;
         overflow: auto;
+
+        &:focus {
+            outline: none;
+        }
     }
 
 
