--- a/packages/default/scss/scheduler/_layout.scss
+++ b/packages/default/scss/scheduler/_layout.scss
@@ -392,6 +392,10 @@
         border-color: inherit;
         position: relative;
         overflow: auto;
+
+        &:focus {
+            outline: none;
+        }
     }
 
 
