feat(window): update styles to match updated rendering
BREAKING CHANGE: The following classes are being renamed:

* `k-window-actions` renamed to `k-window-titlebar-actions`

* `k-window-buttongroup`, `k-window-buttons` renamed to `k-window-actions`

BREAKING CHANGE: The following classes are being removed:

* `k-window-titleless` removed

* `k-dialog-*` classes removed

BREAKING CHANGE: By default, the color of the titlebar is now the base color
and can be changed via the new themeColor property of the component

--- a/packages/default/scss/window/_layout.scss
+++ b/packages/default/scss/window/_layout.scss
@@ -73,7 +73,7 @@
 
 
     // Actions
-    .k-window-actions {
+    .k-window-titlebar-actions {
         margin: -5em 0;
         margin-inline-end: calc( #{$kendo-window-titlebar-padding-y} - #{$kendo-window-titlebar-padding-x} );
         line-height: 1;
@@ -84,11 +84,11 @@
         align-items: center;
         vertical-align: top;
     }
-    .k-window-action {
+    .k-window-titlebar-action {
         flex-shrink: 0;
         opacity: $kendo-window-action-opacity;
     }
-    .k-window-action:hover {
+    .k-window-titlebar-action:hover {
         opacity: $kendo-window-action-hover-opacity;
     }
 
@@ -129,8 +129,7 @@
     }
 
     // Buttons Layout
-    .k-window-buttons,
-    .k-window-buttongroup {
+    .k-window-actions {
         @include border-bottom-radius( $kendo-window-border-radius );
         padding: $kendo-window-buttongroup-padding-y $kendo-window-buttongroup-padding-x;
         border-width: $kendo-window-buttongroup-border-width 0 0;
